@@ -41,7 +41,7 @@ include "include/gnuplot.php";
 include "include/functions.php";
 
 
-$pgm3version='100312';
+$pgm3version='120424';
 	
 
 
@@ -701,9 +701,9 @@ ht><font $fontcolor1><b>
 
 #####################################################################################################################
 
-	##### Check Version of FHEM
-	      if (! ($stack[0][children][0][name]=='_internal__LIST')) ##older FHZ100 have no Internal_LIST
-		{echo "Error!! There is no FHEM. You need at least FHEM-4.0 to run this pgm3!!";}
+	##### Check Version of FHEM   -- not neccessary any more...
+	#      if (! ($stack[0][children][0][name]=='_internal__LIST')) ##older FHZ100 have no Internal_LIST
+	#	{echo "Error!! There is no FHEM. You need at least FHEM-4.0 to run this pgm3!!";}
 
 
 	## now the xmllist will be writen on screen as html
